<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_titre"
        android:textAlignment="center"
        android:textSize="@dimen/size_txt_title_h1" />

    <Button
        android:id="@+id/main_btn_easy"
        android:layout_width="@dimen/largeur_btn"
        android:layout_height="@dimen/hauteur_btn"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/txt_btn_easy"
        android:textSize="@dimen/size_txt_title_normal"
        app:backgroundTint="@color/color_easy" />

    <Button
        android:id="@+id/main_btn_traditional"
        android:layout_width="@dimen/largeur_btn"
        android:layout_height="@dimen/hauteur_btn"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/txt_btn_traditional"
        app:backgroundTint="@color/color_traditional"
        tools:textSize="@dimen/size_txt_title_normal" />

    <Button
        android:id="@+id/main_btn_season"
        android:layout_width="@dimen/largeur_btn"
        android:layout_height="@dimen/hauteur_btn"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/txt_btn_season"
        app:backgroundTint="@color/color_seasonal"
        tools:textSize="@dimen/size_txt_title_normal" />

    <Button
        android:id="@+id/main_btn_gluten"
        android:layout_width="@dimen/largeur_btn"
        android:layout_height="@dimen/hauteur_btn"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/txt_btn_gluten"
        android:textSize="@dimen/size_txt_title_normal"
        app:backgroundTint="@color/color_gluten" />

</LinearLayout>