<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:maxHeight="150dp">

    <ImageView
        android:id="@+id/line_recipe_imgView_recipe"
        android:layout_width="139dp"
        android:layout_height="133dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/image_de_recette"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.50"
        tools:scaleType="fitXY"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/line_recipe_txtView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/titre"
        android:textSize="@dimen/size_txt_title_h2"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toEndOf="@+id/line_recipe_imgView_recipe"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/line_recipe_txtView_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="50dp"
        android:text="@string/auteur"
        android:textSize="@dimen/size_txt_title_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toEndOf="@+id/line_recipe_imgView_recipe" />

    <ImageView
        android:id="@+id/line_recipe_imgStar"
        android:layout_width="218dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/star"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/line_recipe_imgView_recipe"
        app:srcCompat="@drawable/star_1" />
</androidx.constraintlayout.widget.ConstraintLayout>